# ds-homework-3

./: .gitignore  CMakeLists.txt  README.md  app  build-and-run.sh  main.cpp
src/: double_stack_exercise2.cpp  farey.cpp  farey.h  lesser_sign_exercise5.cpp  postfix_exercise8.cpp  prime_divisors_exercise3.cpp  scroll_exercise6.cpp  stack_exercise1.cpp  static-list.cpp  static-list.h
